vix/tests/checker-corpus/reject/partial-call-non-prefix.vix
fn add(x: Int, y: Int, z: Int) -> Int {
    x + y + z
}

fn main() -> Int {
    add(x: 1, z: 3, ..)
}
